--- a/pages/.vitepress/theme/style.css
+++ b/pages/.vitepress/theme/style.css
@@ -93,17 +93,11 @@
 :root {
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(
-    120deg,
-    #bd34fe 10%,
-    #41d1ff 50%,
-    #77e073 90%
+    #82bae8,
   );
 
   --vp-home-hero-image-background-image: linear-gradient(
-    -45deg,
-    #bd34fe 10%,
-    #47caff 50%,
-    #77e073 90%
+    #82bae8,
   );
   --vp-home-hero-image-filter: blur(44px);
 }
