--- a/pages/.vitepress/theme/style.css
+++ b/pages/.vitepress/theme/style.css
@@ -93,11 +93,14 @@
 :root {
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(
-    #82bae8,
+    120deg,
+    #82bae8 0%,
+    #71a9d8 100%
   );
 
   --vp-home-hero-image-background-image: linear-gradient(
-    #82bae8,
+    #82bae8 0%,
+    #71a9d8 100%
   );
   --vp-home-hero-image-filter: blur(44px);
 }
