--- a/pages/.vitepress/theme/style.css
+++ b/pages/.vitepress/theme/style.css
@@ -95,12 +95,12 @@
   --vp-home-hero-name-background: -webkit-linear-gradient(
     120deg,
     #82bae8 0%,
-    #71a9d8 100%
+    #6aa0cd 100%
   );
 
   --vp-home-hero-image-background-image: linear-gradient(
     #82bae8 0%,
-    #71a9d8 100%
+    #6aa0cd 100%
   );
   --vp-home-hero-image-filter: blur(44px);
 }
